@@ -1,5 +1,8 @@
 2007-11-11  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbgst-plugin-feature.c: supported loaded?.
+	* test/test_plugin_feature.rb: added a test for loaded?.
+
 	* src/rbgst-message.c, src/rbgst-mini-object.c: used RGConvertTable.
 
 	* src/rbgst-plugin-feature.c: supported rank.
